@@ -32,6 +32,7 @@ exempt of errors.
 - Glen Masgai
 - Hartmut Holzgraefe (hholzgra)
 - Ingo Hofmann
+- Ivan Romanov (ivanromanov)
 - Jiri Zouhar
 - John Dennis
 - Jonathan Casiot (no_dice)
